# PackageKit

./: meson_options.txt
backends/dnf/: pk-backend-dnf.c
backends/dnf5/: meson.build  pk-backend-dnf5.cpp
backends/hif/: Makefile.am  pk-backend-hif-comps.c  pk-backend-hif.c
docs/: update security.txt
tests/ci/: Dockerfile-fedora
